Updated swag docs
