# pkg/api/daemonset.go
@@ -11,9 +11,9 @@ import (
 //	@Description	Gets the list of the daemonsets in the k8s cluster.
 //	@Tags			Daemonsets
 //	@Accept			json
-//	@Param			namespace	query	string	false	"daemonset search by namespace"															Format(string)
-//	@Param			label		query	string	false	"search daemonset by label"																Format(string)
-//	@Param			by_item		query	string	false	"set by_item=true to return daemonset results by item with more details, default false"	Format(string)
+//	@Param			namespace	query	string	false	"daemonset search by namespace"					Format(string)
+//	@Param			label		query	string	false	"search daemonset by label"						Format(string)
+//	@Param			name		query	string	false	"return daemonset result by name with details"	Format(string)
 //	@Produce		json
 //	@Success		200	"Sample result: "{\"daemonsets\":[],\"namespace\":\"default\",\"number_of_daemonsets\":0,\"status\":200}" string
 //	@Router			/api/v1/daemonset/list [get]
