# pkg/api/deployment.go
@@ -11,9 +11,9 @@ import (
 //	@Description	Gets the list of the deployments in the k8s cluster.
 //	@Tags			Deployments
 //	@Accept			json
-//	@Param			namespace	query	string	false	"deployment search by namespace"															Format(string)
-//	@Param			label		query	string	false	"search deployment by label"																Format(string)
-//	@Param			by_item		query	string	false	"set by_item=true to return deployment results by item with more details, default false."	Format(string)
+//	@Param			namespace	query	string	false	"deployment search by namespace"						Format(string)
+//	@Param			label		query	string	false	"search deployment by label"							Format(string)
+//	@Param			name		query	string	false	"return deployment result by name with more details."	Format(string)
 //	@Produce		json
 //	@Success		200	"Sample result: "{\"deployments\":[],\"namespace\":\"default\",\"number_of_deployments\":0,\"status\":200}"	string
 //	@Router			/api/v1/deployment/list [get]
