# pkg/api/job.go
@@ -13,9 +13,9 @@ import (
 //	@Description	Gets the list of the job in the k8s cluster.
 //	@tags			Job
 //	@Accept			json
-//	@Param			namespace	query	string	false	"job search by namespace"															Format(string)
-//	@Param			label		query	string	false	"search job by label"																Format(string)
-//	@Param			by_item		query	string	false	"set by_item=true to return job results by item with more details, default false."	Format(string)
+//	@Param			namespace	query	string	false	"job search by namespace"						Format(string)
+//	@Param			label		query	string	false	"search job by label"							Format(string)
+//	@Param			name		query	string	false	"return job result by name with more details."	Format(string)
 //	@Produce		json
 //	@Success		200	"Sample result: "{\"jobs\":[],\"namespace\":\"default\",\"number_of_jobs\":0,\"status\":200}" string
 //	@Router			/api/v1/job/list [get]
