# pkg/api/pod.go
@@ -13,9 +13,9 @@ import (
 //	@Description	Gets the list of the pods in the k8s cluster.
 //	@Tags			Pod
 //	@Accept			json
-//	@Param			namespace	query	string	false	"pod search by namespace"															Format(string)
-//	@Param			label		query	string	false	"search pod by label"																Format(string)
-//	@Param			by_item		query	string	false	"set by_item=true to return pod results by item with more details, default false."	Format(string)
+//	@Param			namespace	query	string	false	"pod search by namespace"						Format(string)
+//	@Param			label		query	string	false	"search pod by label"							Format(string)
+//	@Param			name		query	string	false	"return pod result by name with more details."	Format(string)
 //	@Produce		json
 //	@Success		200	"Sample result: "{\"namespace\":\"default\",\"number_of_pods\":0,\"pods\":[],\"status\":200}" string
 //	@Router			/api/v1/pod/list [get]
