# pkg/api/service.go
@@ -11,9 +11,9 @@ import (
 //	@Description	Gets the list of the services in the k8s cluster.
 //	@Tags			Service
 //	@Accept			json
-//	@Param			namespace	query	string	false	"service search by namespace"															Format(string)
-//	@Param			label		query	string	false	"search service by label"																Format(string)
-//	@Param			by_item		query	string	false	"set by_item=true to return service results by item with more details, default false."	Format(string)
+//	@Param			namespace	query	string	false	"service search by namespace"						Format(string)
+//	@Param			label		query	string	false	"search service by label"							Format(string)
+//	@Param			name		query	string	false	"return service result by name with more details."	Format(string)
 //	@Produce		json
 //	@Success		200	"Sample result: "{\"namespace\":\"default\",\"number_of_services\":0,\"services\":[],\"status\":200}"	string
 //	@Router			/api/v1/service/list [get]
